# ai-parrot

./: .dockerignore  .gitignore  .isort.cfg  CHANGELOG.md  CLAUDE.md  INSTALL  INSTALL.md  MANIFEST.in  Makefile  Procfile.dev  README.md  app.py  appauto.py  auto.py  catalog-info.yaml  chart.html  check_versions.py  conftest.py  d3_network.html  diagnose_env.py  docker-compose.dynamodb.yml  docker-compose.matrix.yml  docker-compose.yml  latest_projects.csv  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  run.py  setup.py  sf_map.html  test_decision_standalone.py  test_fanout_pattern.py  test_whatif_fix.py  tox.ini  whisperx.md  workday_server.py
.agent/: CONTEXT.md
.agent/workflows/: sdd-spec.md
.claude/: settings.json
.claude/agents/: product-analyst.md  qa-runner.md  sdd-autopilot.md  sdd-research.md  sdd-worker.md
.claude/commands/: parrotwiki.md  product-analyst.md  sdd-brainstorm.md  sdd-codereview.md  sdd-done.md  sdd-explain.md  sdd-fromjira.md  sdd-insight.md  sdd-proposal.md  sdd-spec.md  sdd-start.md  sdd-task.md  sdd-tojira.md  user-story.md
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  release.yml  sync-down.yml
agents/: README.md  agents.yaml  expense_approval.py  finance.py  oddie.py  odoo.py  operator.py  security_advisor.py  test.py
agents/navigator/: config.yaml
agentui/: README.md  package-lock.json  package.json  vite.config.ts
artifacts/: BRAINSTORM-jira-oauth2-3lo.md  plan_execution_memory_integration.md  plan_openai_model_refresh.md  probe_webscraping_ingest.py
artifacts/logs/: feat-310-bench-20260716.txt  feat-317-bench-20260720.txt  feat317-regression.md
artifacts/reviews/: PR-4028-NAV-8036-review.md
benchmarks/: multimodal_embedding_benchmark.py  requirements-benchmark.txt
benchmarks/fixtures/: README.md  synthetic_queries.json
benchmarks/pageindex_embedding_latency/: README.md  __init__.py  conftest_tree.py  harness.py  metrics.py  report.py
corpus/compliance_soc2_hipaa/: README.md  build_tree.py  fetch.py  (+1 more)
crew-builder/: README.md  index.html  package-lock.json  package.json  research_pipeline.json  tailwind.config.ts  tsconfig.json
docs/: API_ENDPOINTS.md  ARXIV_TOOL_README.md  CLASSES.md  DECISION_NODE_USAGE.md  EXECUTION_MEMORY.md  FUNCTIONS.md  FilesystemTransport_Spec.docx  INSTALL.md  ORCHESTRATION.md  STYLE_GUIDE.md  USER_AGENTS_API.md  WHATSAPP_AUTONOMOUS_ORCHESTRATOR.md  a2a_communication.md  agent.md  agent_config_creation.md  agent_factory_handler.md  agent_mesh.md  agent_service.md  agent_service_architecture.mermaid  audio-form-voice-modes.md  aws_deployment.md  bot-cleanup-lifecycle.md  charts_samples.md  company_info.md  config.md  contextual-embedding.md  crew.md  crew_handler.md  crew_summary.md  database-agent.md  datasetmanager_design.md  docker-compose.yml  documentdb.md  documentdb_interface.md  dynamodb-local.md  formdesigner-audio-renderer.md  formdesigner-conditional-sections.md  fred_api_tool.md  github-pr-reviewer.md  github-reviewer.md  (+56 more)
documentation/: compliance-evidence-agent-overview.md  deploy-agent-msteams-copilot.md  hitl_tiered_escalation_example.md  parrot-devloop-cli.md  parrot-wiki-cli.md
etc/: navigator.ini
examples/: analyze_video.py  att_agent.py  aws_inspector_toolkit.py  basic_agent.py  check_bot.py  chrome_performance_test.py  code_agent.py  db_tool_usage.py  extract_frames.py  extract_img_dir.py  extract_jira_tickets.py  genmedia_example.py  get_transcript.py  google_maps_example.py  jira_mcp_server.py  liveavatar_voice_worker.py  load_pdf.py  mcp_websocket_client.py  mcp_websocket_server.py  navigator_agent.py  new_store_locator.py  pageindex_compliance_agent.py  scraper.py  slide_gen.py  stream_client.html  structured_output_examples.py  telegram_bot_example.py  telegram_bots.yaml.example  test_agent.py  test_aio.py  test_assurant.py  test_bot.py  test_chatbot.py  test_codebot.py  test_copilot.py  test_df.py  test_documentdb.py  test_exif.py  test_file_upload.py  test_pgvector.py  (+8 more)
faiss_index/: index.faiss  index.pkl
landing/: index.html
outputs/: consensus_synthesis.md
parrot/: __init__.py  _version.py  cli.py  conf.py  exceptions.py  manager.py  models.py  outputs.py  version.py
parrot_ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
plans/: ecr_plan.yaml  hitl_walkthrough.md
policies/: README.md  agents.yaml  defaults.yaml  mcp.yaml  slugs.yaml  superusers.yaml  tools.yaml
requirements/: requirements-dev.txt
resources/: nextstop.py
scripts/: build_architecture_pdf.py  build_llm_wiki.py  debug_yaml_prompt.py  demo_operator.py  generate_mcp_client.py  generate_tool_registry.py  init_dynamodb_local.py  install_salesforce_mcp.py  launch_salesforce_mcp.py  run_in_venv.sh  sweep_worktrees.py  vault_debug.py
sdd/: WORKFLOW.md
templates/: .compiled  corporate_template.pptx  fontlist-v390.json  product_template.html  report.html  report_template.html  template-epson.pptx
tests/: conftest.py  debug_jira.py  explore_yfinance.py  reproduce_schema_search.py  reproduce_sql_agent.py  test_a2a_manager_manual.py  test_agent_crew_examples.py  test_agent_definitions.py  test_agent_service.py  test_anthropic_client.py  test_arxiv_tool.py  test_botmanager_flags.py  test_callbacks.py  test_cel_evaluator.py  test_chat_storage.py  test_checkov_executor.py  test_cloud_posture_toolkit.py  test_cmc_fear_greed.py  test_compliance_mapper.py  test_compliance_report_toolkit.py  test_container_security_toolkit.py  test_crew_hooks.py  test_database_loader.py  test_dataset_manager.py  test_decision_node.py  test_deep_research_mock.py  test_doc_converter_loader.py  test_dynamic_tool_search.py  test_episodic_memory.py  test_execution_memory_integration.py  test_exif_plugin.py  test_finance_fsm.py  test_finance_guards.py  test_finance_memo_to_orders.py  test_finnhub_toolkit.py  test_flow_actions.py  test_flow_definition.py  test_flow_integration.py  test_flow_loader.py  test_flowtask_toolkit.py  (+64 more)
videos/: Navigator Intro-20240828_183359-Grabación de la reunión.vtt  Navigator Intro-20240828_183359-Summary.md
(+14936 files in other folders)
