# ============================================================================
# AI-Parrot Workspace Root
# ============================================================================
# This file is NOT a package — it declares the uv workspace and shared configs.
# Each sub-package in packages/ has its own pyproject.toml.
# ============================================================================

[project]
name = "ai-parrot-workspace"
version = "0.0.0"
requires-python = ">=3.11"
description = "AI-Parrot monorepo workspace"
dependencies = [
    "ai-parrot",
    "ai-parrot-tools",
    "ai-parrot-loaders",
]

[project.optional-dependencies]
# Re-export key ai-parrot extras for `uv sync --extra <name>`
google = ["ai-parrot[google]"]
openai = ["ai-parrot[openai]"]
anthropic = ["ai-parrot[anthropic]"]
groq = ["ai-parrot[groq]"]
xai = ["ai-parrot[xai]"]
llms = ["ai-parrot[llms]"]
embeddings = ["ai-parrot[embeddings]"]

[build-system]
requires = ["setuptools>=67.6.1"]
build-backend = "setuptools.build_meta"

# Workspace root has no packages — prevent setuptools flat-layout discovery
[tool.setuptools]
packages = []

# ---------------------------------------------------------------------------
# uv Workspace
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "pytest-asyncio==1.2.0",
    "pytest-xdist==3.3.1",
    "pytest-assume==2.4.3",
    "pytest-mock==3.15.1",
    "black",
    "pylint",
    "mypy",
    "coverage",
    "maturin==1.9.6",
    "pyrefly",
]

[tool.uv]
override-dependencies = [
    "moviepy==2.2.1",
    "av>=13.0.0,<14.0.0",
    "watchdog>=6.0.0",
    "selenium==4.36.0",
    "ortools>=9.11.4210,<=9.14.6206",
    "blinker==1.7.0",
    "folium==0.20.0",
    "emoji==1.7.0",
    "msal==1.32.0",
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
    "openpyxl>=3.1.2,<=3.1.5",
]

[tool.uv.sources]
ai-parrot = { workspace = true }
ai-parrot-tools = { workspace = true }
ai-parrot-loaders = { workspace = true }
# Uncomment for local development of upstream deps:
# navigator-auth = { path = "../navigator-auth", editable = true }
# asyncdb = { path = "../asyncdb", editable = true }
# querysource = { path = "../../parallel/querysource", editable = true }

# ---------------------------------------------------------------------------
# Shared tool configs
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]
markers = [
    "asyncio: mark a test as a coroutine that should be run by pytest-asyncio",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = ["C0330", "C0326", "W1203"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
