# ============================================================================
# AI-Parrot Workspace Root
# ============================================================================
# This file is NOT a package — it declares the uv workspace and shared configs.
# Each sub-package in packages/ has its own pyproject.toml.
# ============================================================================

[project]
name = "ai-parrot-workspace"
version = "0.0.0"
requires-python = ">=3.11"
description = "AI-Parrot monorepo workspace"
dependencies = [
    "ai-parrot",
    "ai-parrot-tools",
    "ai-parrot-loaders",
    "ai-parrot-embeddings",
    "ai-parrot-visualizations",
    "ai-parrot-pipelines",
    "ai-parrot-integrations",
    "ai-parrot-server",
    "ai-parrot-advisors",
]

[project.optional-dependencies]
# Re-export key ai-parrot extras for `uv sync --extra <name>`
google = ["ai-parrot[google]"]
openai = ["ai-parrot[openai]"]
anthropic = ["ai-parrot[anthropic]"]
claude-agent = ["ai-parrot[claude-agent]"]
groq = ["ai-parrot[groq]"]
xai = ["ai-parrot[xai]"]
zai = ["ai-parrot[zai]"]
llms = ["ai-parrot[llms]"]
# embeddings extra moved from core to the ai-parrot-embeddings satellite
# package (FEAT-201); re-export the package directly (like `pipelines`).
embeddings = ["ai-parrot-embeddings"]
pipelines = ["ai-parrot-pipelines"]

[build-system]
requires = ["setuptools>=67.6.1"]
build-backend = "setuptools.build_meta"

# Workspace root has no packages — prevent setuptools flat-layout discovery.
# This also keeps the root-level `agents/` folder (un-ignored from git for
# FEAT-240) out of any build: an empty package list disables discovery, so
# `agents/` is never collected. MANIFEST.in additionally prunes it from sdists.
[tool.setuptools]
packages = []

# ---------------------------------------------------------------------------
# uv Workspace
# ---------------------------------------------------------------------------
[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=7.2.2",
    "pytest-asyncio==1.2.0",
    "pytest-xdist==3.3.1",
    "pytest-assume==2.4.3",
    "pytest-mock==3.15.1",
    "black",
    "pylint",
    "mypy",
    "coverage",
    "maturin==1.9.6",
    "pyrefly",
    "pytest-aiohttp>=1.1.0",
    "openai>=1.0.0",
]

[tool.uv]
# Project is Linux-only (see classifiers). Restricting the lock to Linux
# avoids non-Linux resolution splits that pull incompatible dep combos
# (e.g. async-notify[all]>=1.5.2 ships no macOS wheels).
environments = [
    "sys_platform == 'linux'",
]

# `gemma4` pins transformers>=5.0 (and huggingface_hub>=1.0), which is
# incompatible with the `images`/`all` extras and with whisperx-based audio
# pipelines. Declaring conflicts lets `uv lock` build a universal lock by
# resolving these extras in separate splits.
conflicts = [
    [
        { package = "ai-parrot", extra = "gemma4" },
        { package = "ai-parrot", extra = "all" },
    ],
    [
        { package = "ai-parrot", extra = "gemma4" },
        { package = "ai-parrot", extra = "images" },
    ],
    [
        { package = "ai-parrot", extra = "gemma4" },
        { package = "ai-parrot-loaders", extra = "audio" },
    ],
    [
        { package = "ai-parrot", extra = "gemma4" },
        { package = "ai-parrot-loaders", extra = "ml" },
    ],
    [
        { package = "ai-parrot", extra = "gemma4" },
        { package = "ai-parrot-loaders", extra = "ml-heavy" },
    ],
    [
        { package = "ai-parrot", extra = "gemma4" },
        { package = "ai-parrot-loaders", extra = "all" },
    ],
    # flowtask/psutil vs liveavatar-voice — RESOLVED (flowtask 5.12.1).
    # openlit vs liveavatar-voice otel — RESOLVED via override-dependencies:
    # livekit-agents 1.6.1 pins otel~=1.39.0 (<1.40), but otel 1.39→1.42 is
    # backwards-compatible (stable semver API). We override the otel pins to
    # >=1.39.0 (no upper bound) so both openlit (needs 1.42+) and livekit can
    # share otel 1.42. This avoids conflict splits that cause the resolver to
    # OOM on the 15+ otel-instrumentation sub-packages.
]
override-dependencies = [
    "moviepy==2.2.1",
    "av>=13.0.0,<14.0.0",
    "watchdog>=6.0.0",
    "selenium==4.36.0",
    "ortools==9.14.6206",
    "blinker==1.7.0",
    "folium==0.20.0",
    "emoji==1.7.0",
    "babel>=2.16.0",
    "msal==1.32.0",
    "numba>=0.57.0",
    "llvmlite>=0.40.0",
    "openpyxl>=3.1.2,<=3.1.5",
    # google-cloud-aiplatform>=1.153 (needed for google-genai>=2.6) requires
    # google-cloud-storage>=3.10 on Python >=3.13, but navigator-api[google]
    # caps it at <=3.1.0. Override the floor to 3.10 so the py3.13/3.14 split
    # resolves; navigator-api works fine against google-cloud-storage 3.x.
    "google-cloud-storage>=3.10.0",
    # Lightning AI removed `lightning` from PyPI on 2026-04-30, breaking
    # any version of pyannote-audio>=3.x. whisperx 3.8.5 transitively
    # requires pyannote-audio>=4.0.0, which propagates the failure.
    # Override the pyannote-audio dep to a marker that never matches so
    # whisperx can still resolve. Diarization features are unavailable
    # at runtime until upstream republishes `lightning`.
    "pyannote-audio ; sys_platform == 'never'",
    # livekit-agents 1.6.1 pins otel~=1.39.0 (<1.40), but the otel API is
    # stable across 1.39→1.42 (semver). Override to >=1.39.0 so livekit and
    # openlit (needs 1.42+) share a single otel version without a conflict
    # split (which causes the resolver to OOM on 15+ instrumentation pkgs).
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-exporter-otlp-proto-common>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-proto>=1.39.0",
    # arxiv>=3.0.0 caps requests<2.34 (>=2.32); flowtask 5.12.3 needs >=2.33.0.
    # The intersection is the 2.33 series, so pin requests there to let arxiv and
    # flowtask co-resolve cleanly without forcing arxiv's ceiling open.
    "requests>=2.33,<2.34",
    # flowtask 5.12.3+ pins zeep[async]==4.3.2, but the agents extra pins
    # ==4.3.3. Both are exact pins, and the `all` extra co-resolves agents +
    # flowtask in one split, so they collide. Patch-level diff; force a single
    # version (4.3.3, matching agents) so both extras resolve.
    "zeep[async]==4.3.3",
]
constraint-dependencies = [
    # Narrow the otel instrumentation search space. openlit pulls 15+ otel
    # instrumentation sub-packages, each with 59 versions and an exact
    # semantic-conventions pin. Without this, the resolver backtracks hundreds
    # of times trying combinations. Constraining to >=0.60b0 eliminates
    # 40+ candidates per package.
    # In the liveavatar-voice conflict split, livekit-agents~=1.5 pins
    # otel~=1.39, which maps to sem-conv 0.60b0 — so 0.60b0 is compatible
    # with BOTH splits.
    "opentelemetry-semantic-conventions>=0.60b0",
    "opentelemetry-instrumentation>=0.60b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.60b0",
    "opentelemetry-instrumentation-asgi>=0.60b0",
    "opentelemetry-instrumentation-django>=0.60b0",
    "opentelemetry-instrumentation-falcon>=0.60b0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "opentelemetry-instrumentation-flask>=0.60b0",
    "opentelemetry-instrumentation-httpx>=0.60b0",
    "opentelemetry-instrumentation-logging>=0.60b0",
    "opentelemetry-instrumentation-pyramid>=0.60b0",
    "opentelemetry-instrumentation-redis>=0.60b0",
    "opentelemetry-instrumentation-requests>=0.60b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b0",
    "opentelemetry-instrumentation-starlette>=0.60b0",
    "opentelemetry-instrumentation-threading>=0.60b0",
    "opentelemetry-instrumentation-tornado>=0.60b0",
    "opentelemetry-instrumentation-urllib>=0.60b0",
    "opentelemetry-instrumentation-urllib3>=0.60b0",
    "opentelemetry-instrumentation-wsgi>=0.60b0",
]

[tool.uv.sources]
ai-parrot = { workspace = true }
ai-parrot-tools = { workspace = true }
ai-parrot-loaders = { workspace = true }
ai-parrot-embeddings = { workspace = true }
ai-parrot-visualizations = { workspace = true }
ai-parrot-pipelines = { workspace = true }
ai-parrot-integrations = { workspace = true }
ai-parrot-advisors = { workspace = true }
ai-parrot-server = { workspace = true }
# asyncdb = { path = "../asyncdb", editable = true }
# querysource = { path = "../../parallel/querysource", editable = true }

# ---------------------------------------------------------------------------
# Shared tool configs
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]
markers = [
    "asyncio: mark a test as a coroutine that should be run by pytest-asyncio",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = ["C0330", "C0326", "W1203"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
